...

  const categories = [
    'general',
    'geography',
    'literature',
    'music',
    'sport',
    'history',
    'mathematics',
  ];

  const categoryDictionary = {
    general: 'General',
...
    quizMutation.mutate({
      author_id: getUserId,
      category: quizInfo.category,
      is_visible: false,
      name: quizInfo.quizName,
      end_date: currentDate,
      description: isPublic === true ? 'public' : 'private',
      questions: getQuestion,
      participant_mail: whiteList as any,
    });
  };

  const editQuizMutation = useQuizEditMutation({
...
          )}
          <View style={themedStyles.logo}>
            <Icon xml={logo} width="100%" height={'68'} />
          </View>
          <View style={{ marginTop: '2.5%', alignItems: 'center' }}>
            <Input
              testID="createQuiz-name-input"
              size="medium"
              placeholder="Quiz Name"
              value={quizInfo.quizName !== undefined ? quizInfo.quizName : ''}
              onChangeText={(e) => {
                setQuizInfo({
                  quizName: e,
...
                });
              }}
            />
          </View>
          <View style={{ marginTop: '2.5%', alignItems: 'center' }}>
            <Input
              testID="createQuiz-duration-input"
              size="medium"
              placeholder="Enter duration (in minutes)"
              keyboardType="number-pad"
              value={
                quizInfo.duration !== undefined
                  ? quizInfo.duration.toString()
...
                });
              }}
            />
          </View>
          <View style={{ marginTop: '2.5%' }}>
            <Button
              testID="createQuiz-category-button"
              size="large"
              color={
                quizInfo.category === 'Select Category'
                  ? 'secondary'
                  : 'primary'
              }
...
            }}
          >
            <Text style={themedStyles.questionsTitle}>Questions</Text>
            <View style={themedStyles.addButton}>
              <View style={{ width: 108, height: 28 }}>
                <Button
                  testID="createQuiz-add-button"
                  size="small"
                  color="special"
                  onPress={() =>
                    router.route(PATHS.QUESTION_CREATE, {
                      isEdit: false,
                      quiz: quiz,
...
              Public
            </Text>
          </View>
          {!isPublic && (
            <View style={{ width: '100%', marginTop: 12 }}>
              <Button
                testID="createQuiz-manageParticipants-button"
                color="special"
                size="xlarge"
                onPress={bottomSheetController2.open}
              >
                Manage Participations
              </Button>
...
            style={{
              width: '100%',
              marginTop: '2%',
            }}
          >
            <Button
              testID="createQuiz-create-button"
              size="xlarge"
              color="primary"
              onPress={() => {
                isEdit ? editQuiz() : quizCreate();
              }}
              disabled={isButtonDisabled}
...
                paddingRight: 20,
                justifyContent: 'center',
                marginTop: 6,
              }}
            >
              <Input
                testID="createQuiz-participantEmail-input"
                size="medium"
                placeholder="Enter email"
                value={mailValue}
                onChangeText={setMailValue}
                keyboardType="email-address"
                autoCapitalize="none"
              />
              <View style={{ width: '100%', marginTop: 12 }}>
                <Button
                  testID="createQuiz-addParticipant-button"
                  size="xlarge"
                  color="primary"
                  onPress={() => {
                    setMailValue('');
                    if (isValidEmail(mailValue)) {
                      setWhiteList([...whiteList, mailValue]);
...
                    }
                  }}
                >
                  Add
                </Button>
                <Button
                  testID="createQuiz-closeManageParticipantsBottomSheet-button"
                  style={themedStyles.cancelButton}
                  size="xlarge"
                  color="secondary"
                  onPress={() => {
                    bottomSheetController2.close();
                  }}
...
