...
  return (
    <Layout>
      <Container>
        <Text style={themedStyles.textStyle}>Text</Text>
        <View style={{ marginTop: '1%', height: 88 }}>
          <Input
            testID="addQuestion-questionBody-input"
            size="medium"
            placeholder="Write your question"
            inputTextHeight={88}
            multiline={true}
            value={content}
            onChangeText={setContent}
...
              flex: 1,
              justifyContent: 'flex-end',
              alignItems: 'flex-end',
            }}
          >
            <QuesttionType
              type="polygon"
              checked={questionType === 'integer'}
              onPress={() => {
                setQuestionType('integer');
              }}
            />
          </View>
...
            </View>
          </View>
        )}
        {questionType === 'integer' && (
          <View style={{ marginTop: '1%' }}>
            <Input
              testID="addQuestion-correctAnswer-input"
              size="medium"
              placeholder="Enter correct answer"
              value={integerContent}
              onChangeText={setIntegerContent}
            />
          </View>
...
          style={{
            width: '100%',
            marginTop: '3%',
          }}
        >
          <Button
            testID="addQuestion-create-button"
            disabled={isButtonDisabled}
            size="xlarge"
            color="primary"
            onPress={() => {
              if (questionType === 'integer') {
                const newQuestion = {
...
